# selenium-django-celery-rabbitmq-mysql-demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.sh
manager/: celery.py  db_router.py  settings.py  urls.py
news_scraper/: apps.py  models.py
news_scraper/migrations/: 0001_initial.py
news_scraper/naver_news/: section_200100.py  section_200101.py  section_200102.py  section_200103.py  section_200104.py  section_200105.py  section_200106.py  section_200107.py
news_scraper/naver_news/module/: logging_utils.py  main.py  mappers.py  scrapers.py  scraping_utils.py
